--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-image-picker": "^16.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -52,6 +53,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
